--- a/AdminCleanCash/AdminCleanCash/AdminCleanCash.csproj
+++ b/AdminCleanCash/AdminCleanCash/AdminCleanCash.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.16" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.483098-pre1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.DataGrid" Version="3.1.0" />
